--- a/app/src/main/res/layout/activity_is_dead.xml
+++ b/app/src/main/res/layout/activity_is_dead.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".IsDead">
 
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="scan"
+        android:text="Scan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
