Lite bättre knappar :)

--- a/app/src/main/res/layout/activity_ingame.xml
+++ b/app/src/main/res/layout/activity_ingame.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
         android:onClick="breed"
-        android:text="Breed"
+        android:text="FInish Day"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
