--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -80,6 +80,7 @@
         android:ems="10"
         android:hint="@string/name_input"
         android:inputType="textPersonName"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
