last minute change

--- a/app/src/main/res/layout/activity_show_qr.xml
+++ b/app/src/main/res/layout/activity_show_qr.xml
@@ -18,4 +18,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.39"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/eaten_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:onClick="Finished"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
